refractored everything. Implimented storm-serve as a replacement to gulp + nginx frontend. Awesome

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,13 +6,12 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 
-    <link rel="stylesheet" href="app.css">
-    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="stylesheet" href="app.scss">
+    <script src="app.js"></script>
+
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
-<script src="app.js"></script>
 
 </body>
 </html>
