--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 
-    <link rel="stylesheet" href="app.scss">
-    <script src="app.js"></script>
+    <link rel="stylesheet" href="/app.scss">
+    <script src="/app.js"></script>
 
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900' rel='stylesheet' type='text/css'>
 </head>
