--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="utf-8">
     <title></title>
-    <meta name="description" content="">
+    <meta name="description" content="environment">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
+
+    <meta name="apple-mobile-web-app-title" content="environment">
+    <meta name='apple-mobile-web-app-capable' content='yes'>
 
     <link rel="stylesheet" href="/app.scss">
     <script src="/app.js"></script>
 
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900' rel='stylesheet'
+          type='text/css'>
 </head>
 <body>
 
